--- a/cle.html
+++ b/cle.html
@@ -282,12 +282,12 @@
     <div id="m6_4">sro kfa du srei ktu foi</div>
     <div id="m6_5">sro kfa du srei ktu foi ksi</div>
     <script>
-      molecular("mol6_0","m6_0", 120, 70,144,196);
-      molecular("mol6_1","m6_1", 120, 70,144,196);
-      molecular("mol6_2","m6_2", 120, 70,144,196);
-      molecular("mol6_3","m6_3", 120, 70,144,196);
-      molecular("mol6_4","m6_4", 120, 70,144,196);
-      molecular("mol6_5","m6_5", 120, 70,144,196);
+      molecular("mol6_0","m6_0", 100, 70,144,196);
+      molecular("mol6_1","m6_1", 100, 70,144,196);
+      molecular("mol6_2","m6_2", 100, 70,144,196);
+      molecular("mol6_3","m6_3", 100, 70,144,196);
+      molecular("mol6_4","m6_4", 100, 70,144,196);
+      molecular("mol6_5","m6_5", 100, 70,144,196);
     </script>
   </div>
   <br>
@@ -310,7 +310,109 @@
   Les modules poétiques permettent une lecture à plusieurs niveaux, grâce à la fusion des trois modes du graphieros, et de ponts possibles opérés entre les modules. Le désir de réaliser un langage non linéaire ne se trouve pas à la source de la structuration des modules poétiques, mais dans la mesure où l’œil du lecteur pouvait emprunter plusieurs chemins, il nous apparaissait nécessaire de mentionner cette recherche de la non-linéarité, toujours présente dans le ciel des Idées de l’idéolinguiste, dont l’essence même stimule les tentatives d’éclatement de la structure de la langue, offrant à la place d’une route unique à suivre par le lecteur, une arborescence sur laquelle son œil peut se promener.
   <br><br>
   Voici pour exemple le module de base, qui peut servir de structure pour exprimer un proverbe, un aphorisme ou un poème:
+  <br><br>
+  <img id="pic0" src="pics/cle_pic0.png">
+  <br><br>
+  <span class="fig">Fig.9<br>Le contrat (donner la vie, recevoir l'instinct)</span>
+  <br><br>
+  Dans cet exemple, les deux glyphes les plus gros sont reliés par un trait central, dont la fonction de la sinuosité trouvera son expression lorsqu’il s’agira de connecter plusieurs modules, tel qu’il sera présenté plus loin. Nous avons vu que le mode linéaire du graphieros indique par cette liaison centrale qu’un mot est formé par les glyphes qu’elle relie. Ici, <b>[fy.a-rse.a]</b> (donner – recevoir), forme donc un verbe qui pourrait se traduire par « contracter », que nous traduisons en français par « le contrat », le module poétique faisant licence de l’économie du préfixe pour des raisons de simplicité esthétique. 
+  <br><br>
+  Ces deux gros glyphes sont aussi les premiers d’un mot en mode moléculaire. Ainsi, pour le glyphe <b>[fy.a]</b> en haut : <b>[fy.a-sa-ka]</b> (donner-vivre-humain), traduit par : « Donner vie à l’humain » ; pour le second glyphe <b>[rse.a]</b> en bas : <b>[rse.a-vʒa.i-pki.a]</b> (recevoir-vouloir-animal), traduit par : « Recevoir l’instinct ».
+  <br><br>
+  Ces deux mots en mode moléculaire forgent donc un méta-mot par la liaison centrale, où il faudrait condenser « Donner vie à l’humain » en un seul concept, et faire de même pour « recevoir l’instinct », pour ensuite trouver quel méta-mot est exprimé par leur liaison linéaire. 
+  <br><br> 
+  <span class="center">
+  vivre – donner – humain : <b>humaniser</b>
+  <br>
+  vouloir – recevoir – animal : <b>intuition</b>
+  <br><br> 
+  Le méta-mot de cet aphorisme serait donc conclu par :
+  <br>
+  <b>humaniser-intuition</b>
+  </span>
+  <br><br>
+  Je laisse au lecteur le soin de trouver un mot qui représenterait la fusion de ces deux concepts. 
+  <br><br>
+  Le module poétique modèle ainsi le sens sur plusieurs niveaux, offrant au poète des possibilités associatives, référentielles et contradictoires nouvelles. Ces possibilités sont démultipliées par la mise en connexion de plusieurs modules, comme dans l’exemple suivant : 
+  <br><br>
+  <img id="pic1" src="pics/cle_pic1.png">
+  <br><br>
+  <span class="fig">Fig.10<br>« Un peuple volontaire perd la peur d’être, et s’ouvre vers sa lumière, qui rayonne sur l’apparence »</span>
+  <br><br>
+  Au point où se rapprochent les sommets des connexions sinusoïdales, un événement « physique » a lieu, dans l’émergence d’un concept par le frottement des deux modules. La traduction que nous avons offerte de ces modules ainsi reliés est arbitraire ; c’est une des voies possibles où la lecture s’engage. Il est aisé de voir comment peuvent se cumuler deux, trois, dix modules de la sorte, qui viennent s’enclencher en s’emboîtant, à l’instar de certaines molécules biologiques, pour former tout un tissu d’idées.
+  <br><br>
+  Les pages 39 et 40 (comprendre 47 et 48 en base 10...) du carnet « graphieros uniquement » (le premier carnet rédigé uniquement et directement en graphieros, sans jamais passer par le français), reproduites sur les pages suivantes, présentent la suite des modules de la figure 9.3, avec les liaisons linéaires verticales qui relient les modules du haut et du bas de la page, offrant un niveau de lecture supplémentaire. On voit comment il est possible d’ajuster ces différents niveaux, jusqu’à fractaliser la structure du texte. Il nous est permis en effet d’imaginer que chacun de ces glyphes, regardés à la loupe, soient flanqués de glyphes plus petits, qui viendraient en préciser l’idée. C’est peut-être là l’occasion de produire un beau manuscrit de poésie, ou de philosophie.
+  <br><br>
+  La fragmentation de la linéarité de lecture dégage des plis du drap d’Apollon où vient s’étendre bruyamment Dionysos, qui y déploie son chant d’interprétation, d’<i>erreur</i>, au sens où Nietzsche l’entendait peut-être (<i>Aurore</i>, livre 5).
+  <br><br>
+  <img id="pic2" src="pics/cle_pic2.png">
+  <br><br>
+  <span class="fig">Page 39 du carnet "graphieros uniquement"</span>
+  <br><br>
+  <img id="pic3" src="pics/cle_pic3.png">
+  <br><br>
+  <span class="fig">Page 40 du carnet "graphieros uniquement"</span>
+  <br><br><br><br>
+  <h1 id="link3">3<br><br>Nombres</h1>
+  <h4>3.0<br> Système numérique</h4>
+  <br><br>
+  Cohérent avec l’idée même de l’hexagone, le système duodécimal a été sélectionné pour intégrer le graphieros. La base douze ajoute un symbole pour le chiffre 10, et un autre pour 11, soit respectivement χ et Ɛ (d'autres symboles sont utilisés pour 10 et 11, comme A et B, ou ou α et β, X et Y, T et E. J'ai choisi les symboles utilisés par <i>The Dozenal Society of America</i>). En base douze, 10 correspond donc à 12 de la base 10 ; 20 correspond à 24 de la base 10, etc.
+  <br><br>
+  Les glyphes sont formés de telle sorte qu’un chiffre corresponde au nombre de segments qui le composent, à l’exception du zéro<span class="new">, qui exprime la convergence vers une singularité</span> :
+  <br><br>
+  <div class="numberz">
+    <div class="digits">0</div>
+    <div class="digits">1</div>
+    <div class="digits">2</div>
+    <div class="digits">3</div>
+    <div class="digits">4</div>
+    <div class="digits">5</div>
+    <div id="mol_num0"></div>
+    <div id="mol_num1"></div>
+    <div id="mol_num2"></div>
+    <div id="mol_num3"></div>
+    <div id="mol_num4"></div>
+    <div id="mol_num5"></div>
+    <div class="digits">6</div>
+    <div class="digits">7</div>
+    <div class="digits">8</div>
+    <div class="digits">9</div>
+    <div class="digits">χ</div>
+    <div class="digits">Ɛ</div>
+    <div id="mol_num6"></div>
+    <div id="mol_num7"></div>
+    <div id="mol_num8"></div>
+    <div id="mol_num9"></div>
+    <div id="mol_num10"></div>
+    <div id="mol_num11"></div>
+  </div>
+  <div id="mn0">qd-zx-we</div>
+  <div id="mn1">zw-qq-xx-ee-dd-ss</div>
+  <div id="mn2">wzd-qq-ss-xx-ee</div>
+  <div id="mn3">wzdw-qq-ss-ee-xx</div>
+  <div id="mn4">wzexw-qq-ss-dd</div>
+  <div id="mn5">wzexw-qd</div>
+  <div id="mn6">wqzedxw-ss</div>
+  <div id="mn7">dqzedxwq</div>
+  <div id="mn8">wqzxdew</div>
+  <div id="mn9">zedxwqzsd-sw</div>
+  <div id="mn10">zedxwqzsd-sw-zw</div>
+  <div id="mn11">zedxwqzsd-sw-wzd</div>
 
+  <script>
+    fractal("mol_num0", "mn0", 45, 125,119,102);
+    fractal("mol_num1", "mn1", 45, 125,119,102);
+    fractal("mol_num2", "mn2", 45, 125,119,102);
+    fractal("mol_num3", "mn3", 45, 125,119,102);
+    fractal("mol_num4", "mn4", 45, 125,119,102);
+    fractal("mol_num5", "mn5", 45, 125,119,102);
+    fractal("mol_num6", "mn6", 45, 125,119,102);
+    fractal("mol_num7", "mn7", 45, 125,119,102);
+    fractal("mol_num8", "mn8", 45, 125,119,102);
+    fractal("mol_num9", "mn9", 45, 125,119,102);
+    fractal("mol_num10", "mn10", 45, 125,119,102);
+    fractal("mol_num11", "mn11", 45, 125,119,102);
+  </script>
 
 </section>
   
