--- a/cle.html
+++ b/cle.html
@@ -942,6 +942,88 @@
   <br><br>
   Les sons sélectionnés pour les glyphes sont de plusieurs ordres:
 
+  <div id="pareidolie" class="two_things">
+    <span>Similaires au français:</span>
+    <div>
+      <span class="fig">être bras</span>
+      <div id="frac_bra"></div>
+      <span class="fig1">[bra]</span>
+    </div>
+  
+    <span>Similaires à l'anglais:</span>
+    <div>
+      <span class="fig">être ciel</span>
+      <div id="frac_skai"></div>
+      <span class="fig1">[ska.i]</span>
+    </div>
+
+    <span>Similaires à l'italien:</span>
+    <div>
+      <span class="fig">attendre</span>
+      <div id="frac_spea"></div>
+      <span class="fig1">[spe.a]</span>
+    </div>
+
+    <span>Similaires à l'espagnol:</span>
+    <div>
+      <span class="fig">être étoile</span>
+      <div id="frac_stea"></div>
+      <span class="fig1">[ste.a]</span>
+    </div>
+
+    <span>Référentiels:</span>
+    <div>
+      <span class="fig">être conflit</span>
+      <div id="frac_troi"></div>
+      <span class="fig1">[tro.i]</span>
+    </div>
+
+    <span>Idéologiques:</span>
+    <div>
+      <span class="fig">être déchêt</span>
+      <div id="frac_trie"></div>
+      <span class="fig1">[tri.e]</span>
+    </div>
+
+  </div>
+
+  <div id="f_bra">zwdsz-qx-ee</div>
+  <div id="f_skai">wezx-qq-dd</div>
+  <div id="f_spea">qzw-sex-dd</div>
+  <div id="f_stea">wzdw-xeqx-ss</div>
+  <div id="f_troi">qwe-dxz</div>
+  <div id="f_trie">zeq-ws-xd</div>
+
+  <script>
+    fractal("frac_bra","f_bra", 60, 125, 119, 102, null);
+    fractal("frac_skai","f_skai", 60, 125, 119, 102, null);
+    fractal("frac_spea","f_spea", 60, 125, 119, 102, null);
+    fractal("frac_stea","f_stea", 60, 125, 119, 102, null);
+    fractal("frac_troi","f_troi", 60, 125, 119, 102, null);
+    fractal("frac_trie","f_trie", 60, 125, 119, 102, null);
+  </script>
+
+  <br><br>
+  Dans le cas où deux glyphes identiques se suivent, on ne prononcera pas les consonnes du second glyphe.
+  <br><br><br>
+
+  <hr id="noms_propres">
+  <br><br><br>
+  <h1 id="link6">6<br><br>Noms propres</h1>
+  <hr id="prefixe_nom_propre">
+  <br><br><br>
+  <h4>6.0<br>Préfixe nom propre</h4>
+  <br><br>
+  Les locuteurs du graphieros sont invités à se rebaptiser dans cette idéolangue, en mettant en avant les qualités qui leur sont propres. Ainsi votre serviteur s’est-il auto-rebaptisé du nom de « l’artiste », traduit en graphieros par <b>[nmo-ka-ta.e]</b>. 
+  <br><br>
+
+  <span class="fig"><span class="new">être</span><br>nom propre</span>
+  <div class="glyphs" id="frac_prefixe_nmo"></div>
+  <div id="f_p_nmo">qzedxwq-we-xs-dz</div>
+  <script>fractal("frac_prefixe_nmo", "f_p_nmo", 100, 125,119,102,null);</script>
+  <span class="fig">[nmo]</span>
+
+
 
 </section>
   
