--- a/cle.html
+++ b/cle.html
@@ -54,7 +54,6 @@
 
   <span class="edit0">3<sup>ème</sup> édition</span>
   <br><br>
-  <span class="edit1">Les ajouts apportés à cette troisième édition se distinguent par la couleur bleue.</span>
   <br><br><br><br>
 
   <hr id="preface">
@@ -532,7 +531,7 @@
   <br><br><br>
   <h4>3.1<br> Notation chimique des éléments</h4>
   <br>
-  Les éléments du tableau périodique sont baptisés par leur numéro atomique. Lorsqu’ils sont utilisés dans le langage courant, ils sont considérés comme des objets, donc précédés par le préfixe <b>[pta.e]</b>.
+  Les éléments du <a href="#tableau_periodique">tableau périodique</a> sont baptisés par leur numéro atomique. Lorsqu’ils sont utilisés dans le langage courant, ils sont considérés comme des objets, donc précédés par le préfixe <b>[pta.e]</b>.
   <br><br>
   Dans le cadre de la notation scientifique, ils perdent le préfixe, ne laissant que leur numéro, et s’il s’agit de représenter une molécule, les liaisons seront indiquées par des connecteurs entre les glyphes (le tableau périodique complet figure en annexe).
   <br><br>
@@ -1742,6 +1741,48 @@
 
   <br><br>
   Ici, la forêt se définit comme le "lieu tout végétal". <span class="new">Dans les deux cas, c'est la notion d'ensemble, de groupe, qui siège au centre du mot, avec la nuance que "peupler" connote aux individus vivants, raison pour laquelle il remporta ma préférence dans la formation de cet exemple.</span>
+  <br><br><br><br>
+
+  <h1 id="link9">Annexes</h1>
+  <hr id="annexes">
+  <hr id="tableau_periodique">
+  <br><br><br>
+  <h4>A.0<br>Le tableau périodique des éléments</h4>
+  <br><br>
+  Cliquez sur l'image pour l'ouvrir dans une nouvelle fenêtre. Revenir au chapitre traitant de <a href="#notation_chimique">la notation chimique.</a>
+  <br><br>
+  <a href="pics/cle_elements.png" target="_blank"><img src="pics/cle_elements.png"></a>
+  <br><br><br>
+
+  <hr id="cercle_chromatique">
+  <br><br><br>
+  <h4>A.1<br>Le cercle chromatique<br>(première édition)</h4>
+  <br><br>
+  <img src="pics/cle_cercle0.png">
+  Utilisés sans préfixe, les couleurs sont des verbes. Il convient donc de leur ajouter les préfixes adéquats pour indiquer une qualité.
+  <br><br>
+  Les couleurs intermédiaires sont obtenues par mélange. Ainsi, pour la couleur indigo, on dirait <b>[blu-vle]</b>, ou <b>[vle-blu]</b>, selon que l’on ressent la couleur tirant plutôt vers le bleu ou le rouge. La couleur turquoise se dirait <b>[vra.e-blu]</b>, ou <b>[blu.vra.e]</b>, etc.
+  <br><br>
+  Les mélanges les plus complexes peuvent ainsi être écrits et dits d’une façon simple, avec des applications non négligeables pour le peintre.
+  <br><br>
+  Le blanc est indiqué par le glyphe <b>[tew]</b> (tout), le noir par le glyphe <b>[ne]</b> (rien). Notons que le mot « couleur » se dit <b>[me.a-stagna.e]</b>(déterminer-voir-onde), auquel on ajoutera en finale les glyphes <b>[tew]</b> ou <b>[ne]</b> pour indiquer le noir ou le blanc. Ce n’est pas nécessaire pour les autres couleurs, dont les glyphes n’ont pas d’autre fonction.
+
+  <br><br>
+  <h4>A.2<br>Le cercle chromatique<br>(deuxième édition)</h4>
+  <img src="pics/cle_cercle1.png">
+  Dans la mesure où les glyphes utilisés pour les couleurs le seraient aussi pour désigner d’autres concepts, il convient d’utiliser une balise spécifique pour les distinguer :
+  <br><br>
+  <span class="fig">être couleur</span>
+  <div class="glyphs" id="color_klo"></div>
+  <div id="c_klo">dqezwxq</div>
+  <script>fractal("color_klo","c_klo",100,125,119,102,null);</script>
+  <span class="fig1"><b>[klo]</b></span>
+  <br><br>
+  Le glyphe <b>[klo]</b> n’est pas prononcé quand il est balise couleur, uniquement lorsqu’il est utilisé comme verbe « être couleur ».<br><br>
+  Les trois couleurs primaires et les trois couleurs secondaires forment la base du cercle chromatique hexagonal. Les couleurs tertiaires (mélange d’une couleur primaire et d’une secondaire) forment un second hexagone autour du premier. Le mode fractal est utilisé pour représenter ces couleurs tertiaires.
+  <br><br>
+  Pour indiquer si une couleur est plutôt claire ou foncée, on suffixera les glyphes <b>[he.a]</b> (être lumière) et <b>[bro.i]</b> (ombrer).<br><br>
+  Des suffixes référentiels peuvent aussi être ajoutés, comme « le ciel », « la terre », « végétal », pour indiquer une nuance de couleur spécifique.
 
 </section>
   
