--- a/cle.html
+++ b/cle.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="../pics/favicon-32x32.png">
   <title>La clé, 3ème édition</title>
   <meta name="description" content="La clé, par Alec Lloyd Probert. Les origines et le fonctionnement de l'idéolangue graphieros. Troisième édition, 2020." />
-  <script src="graphieros_mini.js"></script>
+  <script src="graphieros.js"></script>
 </head>
 <body>
     <header class="title">
