--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('js', new Date()); 
 
   gtag('config', 'UA-65449763-3');
-</script>  
+</script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -182,19 +182,14 @@
         <p id="linkToCollection"><a href="https://graphieros.com/collection.html" target="_blank">Cliquez ici pour voir des textes écrits en graphieros</a></p>
 
         <section id="gp"></section>
-        <div class="p0"></div>
-        <div class="p0"></div>
         <div class="p0">ka-fy-go ma ka-tae</div>
-        <div class="p1">sa-kme mea-hia-lgio</div>
-        <div class="p1">fa-sta mea-keo-grey-hea</div>
-        <div class="p1">kme de-tsi ka-tsi</div>
-        <div class="p2">kli-vi-vdio-kea-tsi !</div>
-        <div class="p2"></div>
-        <div class="p2"></div>
-        <div class="p2"></div>
-        <script>linear("gp","p0",30, 255, 255, 255)</script>
-        <script>linear("gp","p1",30, 100, 149, 237)</script>
-        <script>linear("gp","p2",30, 255, 255, 255)</script>
+        <div class="p0">sa-kme mea-hia-lgio</div>
+        <div class="p0">fa-sta mea-keo-grey-hea</div>
+        <div class="p0">kme de-tsi ka-tsi</div>
+        <div class="p0">kli-vi-vdio-kea-tsi !</div>
+
+        <script>linear("gp","p0",30, 100,149,237)</script>
+
 
         <div class="graphieros">
 
