--- a/graphieros_journal/graphieros_journal.html
+++ b/graphieros_journal/graphieros_journal.html
@@ -114,12 +114,37 @@
         <div id="m6">ma</div>
         <div id="m7">kli keo grey hea</div>
 
-    </section>        
-<br><br><br><br><br><br><br>
+        <br><br>
+
+        <div id="molecular_0208"></div>
+        <div id="linear_0208"></div>
+        <div id="linear_0208_1"></div>
+
+        <div id="m_0208">mea skoi sa ni</div>
+
+        <div class="l_0208">fkwe ka-fy-go fni nmae-kfa ptae-tvai ,</div>
+        <div class="l_0208">ptae-bdi-soma ma kli-nia-vi-3ia te</div>
+        <div class="l_0208">ka-fy-go v3ai ra-sa-soma kme nia-sta</div>
+        <div class="l_0208">de mea-ne kwi grae di ptae-sye-soma</div>
+        <div class="l_0208">de mea-skoi-sa-ni hia-kme ka-fy-go</div>
+        <div class="l_0208">nwo meama-spea da rsea nmae-kfa kli-ney</div>
+        <div class="l_0208">ptae-dea , ka-fy-go ma sme-zai de</div>
+        <div class="l_0208">pkia-mki kli-nia-vi-gew .</div>
+
+        <div class="l_0208_1">pro vwa ka-fy-go fa de-tsi pkae-tsi ?</div>
+        <div class="l_0208_1">ka-fy-go ma kli-lno boi frya-kno-de</div>
+        <div class="l_0208_1">pro , de ma frya-ma de kwa ka-fy-go</div>
+        <div class="l_0208_1">psoi-v3ai fkwe psoi-fa-vi-ne mea-lgio-ney</div>
+        <div class="l_0208_1">dku ka-fy-go nia hi-dvo-ma kli-skai-ni</div>
+        <div class="l_0208_1">te hi-dvo-snoi te hi-dvo-dse sme-zai</div>
+        <div class="l_0208_1">nmae-kfa ka-fa-vi-ne kwi psoi-vdio-vkye ,</div>
+        <div class="l_0208_1">tli psoi-vkye-sola !</div>
+
+    </section>       
 
 <script>
-    linear("main0", "p0", 40, 100, 150, 100);
-    linear("main1", "p1", 40, 100, 150, 100);
+    linear("main0", "p0", 30, 100, 150, 100);
+    linear("main1", "p1", 30, 100, 150, 100);
     molecular("mol0", "m0", 300, 255,215,0);
     linear("main2", "p2", 40, 100, 150, 100);
     fractal("frac1", "f1", 300, 100,149,237, 0);
@@ -133,9 +158,12 @@
     molecular("mol5", "m5", 100, 255,99,71);
     molecular("mol6", "m6", 100, 255,99,71);
     molecular("mol7", "m7", 100, 255,99,71);
+    linear("linear_0208","l_0208",30, 28,43,28);
+    molecular("molecular_0208","m_0208", 200, 255,255,255);
+    linear("linear_0208_1","l_0208_1",30, 255,255,255);
 </script>
     
-
+<br><br><br><br><br><br><br>
 </body>
 
 </html>
