currently in a mess

--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -8,7 +8,7 @@
     <script src="graphieros0.2.js"></script>
 </head>
 
-<body>
+<body> 
 
     <!--components: empty divs-->
     <div id="LINEAR"></div>
@@ -30,7 +30,7 @@
     <div id="molecular_sequence">sro kfa du srei ktu foi ksi</div>
 
     <!--calligraphic-->
-    <div id="calligraphic_sequence">zx-ws-qe qz-ze-ed-dx-xw-wq</div>
+    <div id="calligraphic_sequence">qz-zx-xw-we-ed-dq</div>
 
 
     <!--function calls-->
@@ -58,18 +58,10 @@
             colors: [],
             background: '',
             svgSize: 200,
+            circleColor: [],
         };
 
         calligraphic({...calli_0});
-
-        let calli_1 = {
-            sect: 'CALLIGRAPHIC',
-            coords: 'calligraphic_sequence',
-            size: 40,
-            svgSize: 100,
-            colors: [100,120,140],
-        }
-        calligraphic({...calli_1})
     </script>
 
 </body>
