--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Board</title>
-    <script src="graphieros0.2.js"></script>
+    <script type="module" src="./graphieros0.2.js"></script>
 </head>
 
 <body> 
@@ -30,7 +30,7 @@
     <div id="molecular_sequence">sro kfa du srei ktu foi ksi</div>
 
     <!--calligraphic-->
-    <div id="calligraphic_sequence">qz-zx-xw-we-ed-dq</div>
+    <div id="calligraphic_sequence">qw-ew</div>
 
 
     <!--function calls-->
