struggling with colors in fractalize function

--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -30,7 +30,7 @@
     <div id="molecular_sequence">sro kfa du srei ktu foi ksi</div>
 
     <!--calligraphic-->
-    <div id="calligraphic_sequence">qz-ze-ed-dx-xw-wq-sx sx sx</div>
+    <div id="calligraphic_sequence">zx-ws-qe ze-ew-wx-xz-qd ws-sx-xw-qz-ze-ed</div>
 
 
     <!--function calls-->
@@ -57,10 +57,10 @@
             coords: 'calligraphic_sequence',
             size: 40,
             radius: '',
-            colors: [],
+            colors: [200,200,200],
             background: '',
             svgSize: 200,
-            circleColor: [255,215,0],
+            circleColor: [200,200,200],
         };
 
         calligraphic({...calli_0});
