--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -29,9 +29,6 @@
     <!--molecular: use true phonology, just separate with spaces. 7 glyphs max-->
     <div id="molecular_sequence">sro kfa du srei ktu foi ksi</div>
 
-    <!--calligraphic-->
-    <div id="calligraphic_sequence">zx-ws-qe ze-ew-wx-xz-qd ws-sx-xw-qz-ze-ed zs-sd-ws</div>
-
 
     <!--function calls-->
 
@@ -54,12 +51,12 @@
 
         let calli_0 = {
             sect: 'CALLIGRAPHIC',
-            coords: 'calligraphic_sequence',
+            sequence: "we-xs-xw-wq-qz-ze-ed-dx-zd zx-ws-qe ze-eq-xw-wd",
             size: 40,
             radius: '',
             colors: [200, 200, 200],
             background: '',
-            svgSize: 400,
+            svgSize: 200,
             light: false,
             intensity: 1.3,
         };
