refactored linear function still mediaQuery issues

--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -16,12 +16,13 @@
     <div id="FRACTAL"></div>
     <div id="MOLECULAR"></div>
     <div id="CALLIGRAPHIC"></div>
+    <div id="CALLIGRAPHIC1"></div>
 
 
     <!--string coordinates-->
     <!--linear: use true phonology, use dash to link glyphs from same word. needs to have a CLASSNAME and not an ID-->
-    <div class="linear_sequence">ka-tsi ma-tsi</div>
-    <div class="linear_sequence">nmo-ka-tae</div>
+    <div class="linear_sequence">ka-tsi ma-tsi kli-nia-vi-kea-tsi</div>
+    <div class="linear_sequence">ka-fy-go hi-v3ai-hia vi-keo</div>
 
     <!--fractal: use azerty keyboard coordinates to draw glyphs (WQZEDXS). Dashes separate sequence of a same glyph-->
     <div id="fractal_sequence">s s s s</div>
@@ -35,13 +36,18 @@
     <script type="module">
         import { linear, fractal, molecular, calligraphic } from './graphieros0.2.js';
 
-        let greenMagic = { color: [100, 200, 100], size: 30, container: 'linear_sequence', section: 'LINEAR' };
+        let linear_0 = {
+            section: 'LINEAR',
+            container: 'linear_sequence',
+            background: [240,240,240],
+            color: [100, 150, 100],
+            size: 50,
+            padding: 20,
+            cartouche: true,
+            border: ''
+        };
 
-        linear({ ...greenMagic });
-        greenMagic.section = 'LINEAR1';
-        greenMagic.container = 'linear_sequence1';
-        greenMagic.size = "";
-        linear({ ...greenMagic });
+        linear({ ...linear_0 });
 
         //fractal parameters: component, string coordinates, size, rgb colors, null = to black, 1 = to white
         fractal("FRACTAL", "fractal_sequence", 200, 200, 200, 200, null);
@@ -54,14 +60,29 @@
             sequence: "we-xs-xw-wq-qz-ze-ed-dx-zd zx-ws-qe ze-eq-xw-wd",
             size: 40,
             radius: '',
-            colors: [200, 200, 200],
+            colors: [150, 200, 220],
             background: '',
-            svgSize: 200,
+            svgSize: 600,
             light: false,
-            intensity: 1.3,
+            intensity: 2,
         };
 
         calligraphic({ ...calli_0 });
+
+        let calli_1 = {
+            sect: 'CALLIGRAPHIC1',
+            sequence: 'zw-wd-qx-ew zq-qx-ed-dw ze-ed-ew-eq-ex',
+            size: 40,
+            radius: '',
+            colors: [150, 200, 220],
+            svgSize: 200,
+            light: false,
+            intensity: 2,
+            fit: false
+        };
+
+        calligraphic({ ...calli_1 });
+
     </script>
 
 </body>
