--- a/white_board/white_board.html
+++ b/white_board/white_board.html
@@ -15,17 +15,11 @@
     <div id="LINEAR1"></div>
     <div id="FRACTAL"></div>
     <div id="MOLECULAR"></div>
-    <div id="CALLIGRAPHIC"></div>
-    <div id="CALLIGRAPHIC1"></div>
+    <div id="CALLIFRACTAL"></div>
 
-
-    <!--string coordinates-->
-    <!--linear: use true phonology, use dash to link glyphs from same word. needs to have a CLASSNAME and not an ID-->
+    <!--linear: use a new div for each line, with same className-->
     <div class="linear_sequence">ka-tsi ma-tsi kli-nia-vi-kea-tsi</div>
     <div class="linear_sequence">ka-fy-go hi-v3ai-hia vi-keo</div>
-
-    <!--fractal: use azerty keyboard coordinates to draw glyphs (WQZEDXS). Dashes separate sequence of a same glyph-->
-    <div id="fractal_sequence">s s s s</div>
 
     <!--molecular: use true phonology, just separate with spaces. 7 glyphs max-->
     <div id="molecular_sequence">sro kfa du srei ktu foi ksi</div>
@@ -34,29 +28,51 @@
     <!--function calls-->
 
     <script type="module">
-        import { linear, fractal, molecular, calligraphic } from './graphieros0.2.js';
+        import { linear, fractal, molecular, callifractal } from './graphieros0.2.js';
 
         let linear_0 = {
             section: 'LINEAR',
             container: 'linear_sequence',
-            background: [240,240,240],
-            color: [100, 150, 100],
+            background: [240, 240, 240],
+            color: [100, 130, 150],
             size: 50,
-            padding: 20,
+            padding: 30,
             cartouche: true,
-            border: ''
+            border: '1px solid white',
         };
 
         linear({ ...linear_0 });
 
-        //fractal parameters: component, string coordinates, size, rgb colors, null = to black, 1 = to white
-        fractal("FRACTAL", "fractal_sequence", 200, 200, 200, 200, null);
+        //fractal parameters
+        let fractal_0 = {
+            section: 'FRACTAL',
+            sequence: 'wedxwqze-xs-dz zx-ws-qe zeq-xwd',
+            size: 200,
+            colors: [100, 130, 150],
+            light: true,
+            intensity: 1.3,
+        }
 
-        //molecular parameters: component, string coordinates, size, rgb colors
-        molecular("MOLECULAR", "molecular_sequence", 200, 0, 0, 0);
+        fractal({ ...fractal_0 });
 
+
+        //molecular parameters
+        let molecular_0 = {
+            section: 'MOLECULAR',
+            sequence: 'sro kfa du srei ktu foi ksi',
+            size: 200,
+            colors: [100,130,150],
+            strokeWidth: '',
+            background: [240,240,240],
+            border: '2px solid rgb(100,130,150)',
+            borderRadius: '100%'
+        }
+
+        molecular({ ...molecular_0 });
+
+        //calligraphic parameters
         let calli_0 = {
-            sect: 'CALLIGRAPHIC',
+            sect: 'CALLIFRACTAL',
             sequence: "we-xs-xw-wq-qz-ze-ed-dx-zd zx-ws-qe ze-eq-xw-wd",
             size: 40,
             radius: '',
@@ -67,21 +83,7 @@
             intensity: 2,
         };
 
-        calligraphic({ ...calli_0 });
-
-        let calli_1 = {
-            sect: 'CALLIGRAPHIC1',
-            sequence: 'zw-wd-qx-ew zq-qx-ed-dw ze-ed-ew-eq-ex',
-            size: 40,
-            radius: '',
-            colors: [150, 200, 220],
-            svgSize: 200,
-            light: false,
-            intensity: 2,
-            fit: false
-        };
-
-        calligraphic({ ...calli_1 });
+        callifractal({ ...calli_0 });
 
     </script>
 
